--- a/SMS_Presentation/Views/Produto/ReativarProduto.cshtml
+++ b/SMS_Presentation/Views/Produto/ReativarProduto.cshtml
@@ -1,7 +1,266 @@
-﻿
+﻿@using Presentation.Extensions
+@model SMS_Solution.ViewModels.ProdutoViewModel
 @{
-    ViewBag.Title = "ReativarProduto";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Produtos</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaProduto", "Produto")">Produtos</a>
+            </li>
+            <li class="active">
+                <strong>Produtos - Reativação</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Produto - Reativação</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Configuração 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Configuração 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                @using (Html.BeginForm("ReativarProduto", "Produto", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        @Html.AntiForgeryToken()
+                        @if (ViewData.ModelState[""] != null && ViewData.ModelState[""].Errors.Count > 0)
+                        {
+                            <div class="alert alert-danger">
+                                <button type="button" class="close" data-dismiss="alert">×</button>
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            </div>
+                        }
+                        <div class="row">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    @Html.HiddenFor(m => m.ASSI_CD_ID)
+                                    @Html.HiddenFor(m => m.CAPR_CD_ID)
+                                    @Html.HiddenFor(m => m.FILI_CD_ID)
+                                    @Html.HiddenFor(m => m.PROD_AQ_FOTO)
+                                    @Html.HiddenFor(m => m.PROD_CD_CODIGO)
+                                    @Html.HiddenFor(m => m.PROD_CD_GTIN_EAN)
+                                    @Html.HiddenFor(m => m.PROD_CD_ID)
+                                    @Html.HiddenFor(m => m.PROD_DS_DESCRICAO)
+                                    @Html.HiddenFor(m => m.PROD_DS_INFORMACAO_NUTRICIONAL)
+                                    @Html.HiddenFor(m => m.PROD_DS_INFORMACOES)
+                                    @Html.HiddenFor(m => m.PROD_DT_CADASTRO)
+                                    @Html.HiddenFor(m => m.PROD_DT_ULTIMA_MOVIMENTACAO)
+                                    @Html.HiddenFor(m => m.PROD_IN_ATIVO)
+                                    @Html.HiddenFor(m => m.PROD_IN_AVISA_MINIMO)
+                                    @Html.HiddenFor(m => m.PROD_IN_BALANCA_PDV)
+                                    @Html.HiddenFor(m => m.PROD_IN_BALANCA_RETAGUARDA)
+                                    @Html.HiddenFor(m => m.PROD_IN_COBRAR_MAIOR)
+                                    @Html.HiddenFor(m => m.PROD_IN_COMPOSTO)
+                                    @Html.HiddenFor(m => m.PROD_IN_DIVISAO)
+                                    @Html.HiddenFor(m => m.PROD_IN_GERAR_ARQUIVO)
+                                    @Html.HiddenFor(m => m.PROD_IN_OPCAO_COMBO)
+                                    @Html.HiddenFor(m => m.PROD_IN_TIPO_COMBO)
+                                    @Html.HiddenFor(m => m.PROD_IN_TIPO_EMBALAGEM)
+                                    @Html.HiddenFor(m => m.PROD_IN_TIPO_PRODUTO)
+                                    @Html.HiddenFor(m => m.PROD_NM_FABRICANTE)
+                                    @Html.HiddenFor(m => m.PROD_NM_LOCALIZACAO_ESTOQUE)
+                                    @Html.HiddenFor(m => m.PROD_NM_MARCA)
+                                    @Html.HiddenFor(m => m.PROD_NM_MODELO)
+                                    @Html.HiddenFor(m => m.PROD_NM_NOME)
+                                    @Html.HiddenFor(m => m.PROD_NM_ORIGEM)
+                                    @Html.HiddenFor(m => m.PROD_NM_REFERENCIA_FABRICANTE)
+                                    @Html.HiddenFor(m => m.PROD_NR_ALTURA)
+                                    @Html.HiddenFor(m => m.PROD_NR_BARCODE)
+                                    @Html.HiddenFor(m => m.PROD_NR_COMPRIMENTO)
+                                    @Html.HiddenFor(m => m.PROD_NR_DIAMETRO)
+                                    @Html.HiddenFor(m => m.PROD_NR_DIAS_VALIDADE)
+                                    @Html.HiddenFor(m => m.PROD_NR_GARANTIA)
+                                    @Html.HiddenFor(m => m.PROD_NR_LARGURA)
+                                    @Html.HiddenFor(m => m.PROD_NR_NCM)
+                                    @Html.HiddenFor(m => m.PROD_NR_REFERENCIA)
+                                    @Html.HiddenFor(m => m.PROD_NR_VALIDADE)
+                                    @Html.HiddenFor(m => m.PROD_PC_MARKUP_MININO)
+                                    @Html.HiddenFor(m => m.PROD_QN_ESTOQUE)
+                                    @Html.HiddenFor(m => m.PROD_QN_PESO_BRUTO)
+                                    @Html.HiddenFor(m => m.PROD_QN_PESO_LIQUIDO)
+                                    @Html.HiddenFor(m => m.PROD_QN_QUANTIDADE_INICIAL)
+                                    @Html.HiddenFor(m => m.PROD_QN_QUANTIDADE_MAXIMA)
+                                    @Html.HiddenFor(m => m.PROD_QN_QUANTIDADE_MINIMA)
+                                    @Html.HiddenFor(m => m.PROD_QN_RESERVA_ESTOQUE)
+                                    @Html.HiddenFor(m => m.PROD_QR_QRCODE)
+                                    @Html.HiddenFor(m => m.PROD_VL_CUSTO)
+                                    @Html.HiddenFor(m => m.PROD_VL_MARKUP_PADRAO)
+                                    @Html.HiddenFor(m => m.PROD_VL_PRECO_MINIMO)
+                                    @Html.HiddenFor(m => m.PROD_VL_PRECO_PROMOCAO)
+                                    @Html.HiddenFor(m => m.PROD_VL_PRECO_VENDA)
+                                    @Html.HiddenFor(m => m.SCPR_CD_ID)
+                                    @Html.HiddenFor(m => m.UNID_CD_ID)
+                                    @Html.HiddenFor(m => m.PROD_TX_OBSERVACOES)
+                                    Nome
+                                    @Html.TextBoxFor(m => m.PROD_NM_NOME, new { @class = "form-control", @readonly="readonly", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.PROD_NM_NOME, "",new { @style="color:red" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.ButtonActionSubmit(text: "Confirma reativação de Produto", htmlAttributes: new { id = "basictoast" })
+                            @Html.ButtonLinkIndex(text: "Cancelar", action: "VoltarBaseProduto", controller: "Produto")
+                        </div>
+                    </div>
+                }
+            </div>
+         </div>
+    </div>
+</div>
 
-<h2>ReativarProduto</h2>
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/plugins/toastrStyles")
+}
+@section Scripts {
+    @Scripts.Render("~/plugins/toastr")
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
 
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+        });
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var i = -1;
+            var toastCount = 0;
+            var $toastlast;
+            var getMessage = function () {
+                var msg = 'Hi, welcome to Inspinia. This is example of Toastr notification box.';
+                return msg;
+            };
+
+            $('#basictoast').click(function () {
+                // Display a success toast, with a title
+                toastr.success('Reativação em andamento!')
+            });
+            $('#showtoast').click(function () {
+                var shortCutFunction = $("#toastTypeGroup input:radio:checked").val();
+                var msg = $('#message').val();
+                var title = $('#title').val() || '';
+                var $showDuration = $('#showDuration');
+                var $hideDuration = $('#hideDuration');
+                var $timeOut = $('#timeOut');
+                var $extendedTimeOut = $('#extendedTimeOut');
+                var $showEasing = $('#showEasing');
+                var $hideEasing = $('#hideEasing');
+                var $showMethod = $('#showMethod');
+                var $hideMethod = $('#hideMethod');
+                var toastIndex = toastCount++;
+                toastr.options = {
+                    closeButton: $('#closeButton').prop('checked'),
+                    debug: $('#debugInfo').prop('checked'),
+                    progressBar: $('#progressBar').prop('checked'),
+                    positionClass: $('#positionGroup input:radio:checked').val() || 'toast-top-right',
+                    onclick: null
+                };
+                if ($('#addBehaviorOnToastClick').prop('checked')) {
+                    toastr.options.onclick = function () {
+                        alert('You can perform some custom action after a toast goes away');
+                    };
+                }
+                if ($showDuration.val().length) {
+                    toastr.options.showDuration = $showDuration.val();
+                }
+                if ($hideDuration.val().length) {
+                    toastr.options.hideDuration = $hideDuration.val();
+                }
+                if ($timeOut.val().length) {
+                    toastr.options.timeOut = $timeOut.val();
+                }
+                if ($extendedTimeOut.val().length) {
+                    toastr.options.extendedTimeOut = $extendedTimeOut.val();
+                }
+                if ($showEasing.val().length) {
+                    toastr.options.showEasing = $showEasing.val();
+                }
+                if ($hideEasing.val().length) {
+                    toastr.options.hideEasing = $hideEasing.val();
+                }
+                if ($showMethod.val().length) {
+                    toastr.options.showMethod = $showMethod.val();
+                }
+                if ($hideMethod.val().length) {
+                    toastr.options.hideMethod = $hideMethod.val();
+                }
+                if (!msg) {
+                    msg = getMessage();
+                }
+                $("#toastrOptions").text("Command: toastr["
+                        + shortCutFunction
+                        + "](\""
+                        + msg
+                        + (title ? "\", \"" + title : '')
+                        + "\")\n\ntoastr.options = "
+                        + JSON.stringify(toastr.options, null, 2)
+                );
+                var $toast = toastr[shortCutFunction](msg, title); // Wire up an event handler to a button in the toast, if it exists
+                $toastlast = $toast;
+                if ($toast.find('#okBtn').length) {
+                    $toast.delegate('#okBtn', 'click', function () {
+                        alert('you clicked me. i was toast #' + toastIndex + '. goodbye!');
+                        $toast.remove();
+                    });
+                }
+                if ($toast.find('#surpriseBtn').length) {
+                    $toast.delegate('#surpriseBtn', 'click', function () {
+                        alert('Surprise! you clicked me. i was toast #' + toastIndex + '. You could perform an action here.');
+                    });
+                }
+            });
+            function getLastToast() {
+                return $toastlast;
+            }
+            $('#clearlasttoast').click(function () {
+                toastr.clear(getLastToast());
+            });
+            $('#cleartoasts').click(function () {
+                toastr.clear();
+            });
+
+        });
+    </script>
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
