--- a/SMS_Presentation/Views/Produto/VerProdutosEstoqueNegativo.cshtml
+++ b/SMS_Presentation/Views/Produto/VerProdutosEstoqueNegativo.cshtml
@@ -1,7 +1,278 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.PRODUTO_ESTOQUE_FILIAL
 @{
-    ViewBag.Title = "VerProdutosEstoqueNegativo";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title">
+        <h3 class="title">Produtos</h3>
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaProduto", "Produto")">Produtos</a>
+            </li>
+            <li class="active">
+                <strong>Produtos - Estoque Negativo por Filial</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-primary pull-right">Hoje</span>
+                    <h5>Produtos</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">@ViewBag.EstoqueNegativo</h1>
+                    <div class="stat-percent font-bold text-navy">32% <i class="fa fa-level-up"></i></div>
+                    <small>Estoque Negativo</small>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Filtros</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+
+                @using (Html.BeginForm("FiltrarEstoqueProduto", "Produto", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+                    <div class="ibox-content">
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Código de Barras
+                                @Html.TextBoxFor(m => m.PRODUTO.PROD_NR_BARCODE, new { @class = "form-control", autofocus = true })
+                            </div>
+                            @if (ViewBag.Perfil == "ADM" || ViewBag.Perfil == "GER")
+                            {
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Filial
+                                    @Html.DropDownListFor(m => m.FILI_CD_ID, (SelectList)ViewBag.Filiais, "Selecionar", new { @class = "form-control" })
+                                </div>
+                            }
+                            <div class="col-lg-4 col-md-4 col-xs-12">
+                                Nome
+                                @Html.TextBoxFor(m => m.PRODUTO.PROD_NM_NOME, new { @class = "form-control", autofocus = true })
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-xs-12">
+                                Marca
+                                @Html.TextBoxFor(m => m.PRODUTO.PROD_NM_MARCA, new { @class = "form-control", autofocus = true })
+                            </div>
+                        </div>
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
+                                @Html.ButtonActionSubmit(text: "Filtrar")
+                                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Produto", action: "RetirarFiltroProdutoEstoqueNegativo")
+                                @Html.ButtonLinkIndex(text: "Gerar Relatório", controller: "Produto", action: "GerarRelatorioNegativo")
+                                @Html.ButtonLinkIndex(text: "Voltar", controller: "Produto", action: "MontarTelaProduto")
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Produtos com Estoque Zerado por Filial</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    <div class="row">
+                        @if (ViewBag.EstoqueNegativos != null && (ViewBag.EstoqueNegativos as List<EntitiesServices.Model.PRODUTO_ESTOQUE_FILIAL>).Count > 0)
+                        {
+                            <table class="table table-striped table-bordered table-hover dataTables-example">
+                                <thead style="background-color:lightsteelblue">
+                                    <tr>
+                                        <th>Filial</th>
+                                        <th>Nome</th>
+                                        <th>Categoria</th>
+                                        <th>Subcategoria</th>
+                                        <th>Código de Barras</th>
+                                        <th>Marca</th>
+                                        <th>Modelo</th>
+                                        <th>Fabricante</th>
+                                        <th>Estoque</th>
+                                        <th></th>
+                                        <th class="td-one-action">Ações</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var cond in (ViewBag.EstoqueNegativos as List<EntitiesServices.Model.PRODUTO_ESTOQUE_FILIAL>))
+                                    {
+                                        <tr>
+                                            <td>@cond.FILIAL.FILI_NM_NOME</td>
+                                            <td>@cond.PRODUTO.PROD_NM_NOME</td>
+                                            <td>@cond.PRODUTO.CATEGORIA_PRODUTO.CAPR_NM_NOME</td>
+                                            <td>@cond.PRODUTO.SUBCATEGORIA_PRODUTO.SCPR_NM_NOME</td>
+                                            <td>@cond.PRODUTO.PROD_NR_BARCODE</td>
+                                            <td>@cond.PRODUTO.PROD_NM_MARCA</td>
+                                            <td>@cond.PRODUTO.PROD_NM_MODELO</td>
+                                            <td>@cond.PRODUTO.PROD_NM_FABRICANTE</td>
+                                            <td>@cond.PREF_QN_ESTOQUE</td>
+                                            @if (!String.IsNullOrEmpty(cond.PRODUTO.PROD_AQ_FOTO))
+                                            {
+                                                <td><img src="@Url.Content(cond.PRODUTO.PROD_AQ_FOTO)" style="width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>
+                                            }
+                                            else
+                                            {
+                                                <td><img src="~/Imagens/Base/icone_imagem.jpg" style="width: auto; height: auto; max-height: 55px; max-width: 45px;"></td>
+                                            }
+                                            <td class="td-one-action">
+                                                @Html.TableLinkDetails(cond.PROD_CD_ID, "EditarProduto", "fa-edit", "Editar/Consultar Produto")
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        }
+                        else
+                        {
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4 col-xs-2">
+
+                                </div>
+                                <div style="border: 5px solid #F6A54A; padding: 10px; border-radius: 8px 8px; " class="col-lg-4 col-md-4 col-xs-8">
+                                    <h2 style="font-weight: bold">Nenhum produto com estoque negativo nas filiais</h2>
+
+                                    @Html.ButtonLinkIndex(text: "Voltar", controller: "Produto", action: "MontarTelaProduto")
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-xs-2">
+
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/plugins/sweetAlertStyles")
 }
 
-<h2>VerProdutosEstoqueNegativo</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/sweetAlert")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+
+    @*<script type="text/javascript">$(document).ready(function () {
+
+            $('.dataTables-example').DataTable({
+                pageLength: 25,
+                dom: '<"html5buttons"B>lTfgitp',
+                buttons: [
+                    { extend: 'copy' },
+                    { extend: 'csv' },
+                    { extend: 'excel', title: 'ExampleFile' },
+                    { extend: 'pdf', title: 'ExampleFile' },
+
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                    .addClass('compact')
+                                    .css('font-size', 'inherit');
+                        }
+                    }
+                ]
+
+            });
+
+
+
+        });</script>*@
+    <script type="text/javascript">$(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });</script>
+
+    <script type="text/javascript">$(document).ready(function () {
+
+            $('.demo3').click(function () {
+                swal({
+                    title: "Confirma a duplicação do produto?",
+                    text: "A tela de edição deste produto será aberta logo após a confirmação",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Confirmar",
+                    cancelButtonText: "Cancelar",
+                   closeOnConfirm: false
+                }, function () {
+                    swal("Duplicado!", "Uma cópia deste produto foi criada", "success");
+                });
+            });
+        });</script>
+
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
